--- a/package.json
+++ b/package.json
@@ -142,8 +142,9 @@
     "typescript": "^4.9.4"
   },
   "scripts": {
-    "start": "vite",
-    "build": "vite build --config vite.config.ts",
+    "start": "gatsby",
+    "build": "gatsby build",
+    "deploy": "gatsby deploy"
     "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css}",
     "type-check": "tsc --noEmit"
   },
