--- a/package.json
+++ b/package.json
@@ -142,9 +142,8 @@
     "typescript": "^4.9.4"
   },
   "scripts": {
-    "start": "gatsby",
-    "build": "gatsby build",
-    "deploy": "gatsby deploy"
+    "start": "vite",
+    "build": "vite build --config vite.config.ts",
     "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css}",
     "type-check": "tsc --noEmit"
   },
